--- a/example/public/css/main.css
+++ b/example/public/css/main.css
@@ -5,3 +5,13 @@ body, input, textarea, select {
 a:link, a:visited, a:active, a:hover {
     color: #00639c;
 }
+
+label {
+    display: inline-block;
+    width: 75px;
+    vertical-align: top;
+}
+
+.errors {
+    color: #8b0000;
+}
